# Universal-disk-explorer

./: .gitignore  readme.md
back-end/: .env.example  README.md  dev.sh  extra.txt  pyproject.toml  setup.py
back-end/core/: file_ops.py
back-end/docs/: poetry_guide.md
back-end/universal_disk_explorer/: README.md  app_config.py  main.py
back-end/universal_disk_explorer/core/: file_ops.py  local_video_quality_analyzer.py  scanner.py  video.py
back-end/universal_disk_explorer/models/: schemas.py
front-end/: .gitignore  README.md  dev.sh  package.json
front-end/src/: App.css  App.tsx  interfaces.ts
front-end/src-tauri/: Cargo.toml  tauri.conf.json
front-end/src-tauri/src/: commands.rs  main.rs
front-end/src/components/: FilesGrid.tsx  FilesTable.tsx  HistorySelect.tsx  Thumbnail.tsx
front-end/src/pages/: Dashboard.tsx  FileExplorer.tsx  Settings.tsx
universal-disk-explorer/: package.json
universal-disk-explorer-back-end/: README.md  extra.txt
universal-disk-explorer-back-end/core/: video.py
universal-disk-explorer/src-tauri/: tauri.conf.json
universal-disk-explorer/src-tauri/src/: main.rs
